--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="js/marker-with-label.js"></script>
     <script src="js/jquery-2.1.3.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div class="dashboard">
