--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/marker-with-label.js"></script>
     <script src="js/jquery-2.1.3.js"></script>
     <script src="js/geo-search.js"></script>
-    <script src="js/map.js"></script>
+    <script src="js/maps.js"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
