--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="js/marker-with-label.js"></script>
     <script src="js/jquery-2.1.3.js"></script>
+    <script src="js/modal.js"></script>
     <script src="js/map-overlays.js"></script>
     <script src="js/search.js"></script>
     <script src="js/maps.js"></script>
